--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<link rel="stylesheet" href="style.css">
 </head>
-<body class='box'>
-    <div class="info"></div>
-    <div class="info_2"></div>
-    <div class="copy"></div>
-    <button class="btn">Losuj</button>
-    
-    <div class="container"></div>
-    
-    <script src='main.js'></script>
+<body>
+    <div class="all">
+        <div class="col_1">
+            <div class="op">
+                <div class="col_1-info"></div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="content_1"></div>
+            <div class="content_2"></div>
+        </div>
+        <div class="col_2">
+            <div class="op">
+                <div class="col_2-info"></div>
+            </div>
+        </div>
+    </div>
+    <div class="btn-cnt">
+        <button class="btn">Klik</button>
+    </div>
+
+<script src="main.js"></script>
 </body>
 </html>
