--- a/index.html
+++ b/index.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 <body>
-    <div class="all">
-        <div class="col_1">
-            <div class="op">
-                <div class="col_1-info"></div>
+    <div class="gradient-box"></div>
+    <div class="menu">
+        <ul class="menu-options">
+            <li>
+                <a href="#colors">colors</a>
+            </li>
+            <li>
+                <a href="#rotate">rotate</a>
+            </li>
+            <li>
+                <a href="#copy">copy</a>
+            </li>
+        </ul>
+        
+        <div class="option" id="colors">
+            <div class="colors">
+                    <button class="color-1">Color 1</button>
+                    <button class="color-2">Color 1</button>
+            </div>
+            <div class="color-box">
+                    <input class='color-red' type='range' min=0 max=255>
+                    <input class='color-green' type='range' min=0 max=255>
+                    <input class='color-blue'type='range' min=0 max=255>
             </div>
         </div>
-        <div class="box">
-            <div class="content_1"></div>
-            <div class="content_2"></div>
+        <div class="option" id="rotate">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, non.
         </div>
-        <div class="col_2">
-            <div class="op">
-                <div class="col_2-info"></div>
-            </div>
+        <div class="option" id="copy">
+            COPY COPT COPY
         </div>
     </div>
-    <div class="btn-cnt">
-        <button class="btn">Klik</button>
+    
+    <div class="buttons">
+        <button class="options"><i class="fas fa-cog"></i></button>
+        <button class="random">Random</button>
     </div>
 
-<script src="main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
