--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="rotate-content">
                     <div class="rotate-pointer"></div>
                 </div>
-                <div class="rotate-angle">0</div>
+<!--                <div class="rotate-angle">0</div>-->
             </div>
         </div>
         
