--- a/index.html
+++ b/index.html
@@ -26,8 +26,18 @@
             <div class="colors-box-btn">
                 <button class="color-1">Color 1</button>
                 <button class="color-2">Color 2</button>
+                <div class="color-box-desktop">
+                    <div class="color-1-desktop">
+                        <div class="color-desktop-box">Color 1</div>
+                        <div class="color-desktop-box-color"></div>
+                    </div>
+                    <div class="color-2-desktop">
+                        <div class="color-desktop-box">Color 2</div>
+                        <div class="color-desktop-box-color"></div>
+                    </div>
+                </div>
             </div>
-            <div class="colors-box">
+            <div class="colors-box box-desktop">
                 <div class="colors-box-set">
                     <div class="color-item color-red"></div>
                     <input type='range' min=0 max=255>
@@ -69,10 +79,11 @@
             </div>
         </div>
         
-        <div class="option" id="copy">
-           <div class="textarea-copy"></div>
-<!--            <textarea class='textarea-copy'></textarea>-->
-            <button class="copy-btn">Copy</button>
+        <div class="option copy" id="copy">
+            <textarea class='textarea-copy'></textarea>
+            <div class="copy-button-box">
+                <button class="copy-btn">Copy</button>
+            </div>
         </div>
     </div>
     
